RESOLVED FIXED 66844
[CSSRegions] RenderRegion is not used if there's another renderer after it
https://bugs.webkit.org/show_bug.cgi?id=66844
Summary [CSSRegions] RenderRegion is not used if there's another renderer after it
Alexandru Chiculita
Reported 2011-08-24 02:11:36 PDT
RenderRegion is only added to the RenderFlowThread if there's no renderer after it in the container box. That's because only RenderObjectChildList::removeChildNode and RenderObjectChildList::appendChildNode were patched to add RenderRegion checks. The RenderObjectChildList::insertChildNode also needs to be updated to take care of insertions.
Attachments
Patch V1 (5.56 KB, patch)
2011-08-24 05:30 PDT, Alexandru Chiculita
no flags
Patch V2 (7.23 KB, patch)
2011-08-24 05:32 PDT, Alexandru Chiculita
hyatt: review+
webkit.review.bot: commit-queue-
Patch Rebased (7.27 KB, patch)
2011-08-24 11:14 PDT, Alexandru Chiculita
no flags
Alexandru Chiculita
Comment 1 2011-08-24 05:30:42 PDT
Created attachment 104984 [details] Patch V1
Alexandru Chiculita
Comment 2 2011-08-24 05:32:58 PDT
Created attachment 104985 [details] Patch V2
Dave Hyatt
Comment 3 2011-08-24 09:29:03 PDT
Comment on attachment 104985 [details] Patch V2 r=me
WebKit Review Bot
Comment 4 2011-08-24 10:31:58 PDT
Comment on attachment 104985 [details] Patch V2 Rejecting attachment 104985 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-03', '--port..." exit_code: 2 Last 500 characters of output: cted.txt patching file LayoutTests/fast/regions/content-flowed-into-regions-dynamically-inserted.html patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/rendering/RenderObjectChildList.cpp Hunk #1 FAILED at 244. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/rendering/RenderObjectChildList.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'David Hyatt', u'--force']" exit_code: 1 Full output: http://queues.webkit.org/results/9493014
Alexandru Chiculita
Comment 5 2011-08-24 11:14:15 PDT
Created attachment 105027 [details] Patch Rebased
Dave Hyatt
Comment 6 2011-08-24 11:35:50 PDT
Comment on attachment 105027 [details] Patch Rebased r=me
WebKit Review Bot
Comment 7 2011-08-24 12:53:45 PDT
Comment on attachment 105027 [details] Patch Rebased Clearing flags on attachment: 105027 Committed r93721: <http://trac.webkit.org/changeset/93721>
WebKit Review Bot
Comment 8 2011-08-24 12:53:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.