[CSSRegions] RenderRegion is not used if there's another renderer after it https://bugs.webkit.org/show_bug.cgi?id=66844

Source/WebCore:

There was no call to attachRegion in RenderObjectChildList::insertChildNode, so
the region was not added to the RenderFlowThread.

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-08-24
Reviewed by David Hyatt.

Test: fast/regions/content-flowed-into-regions-dynamically-inserted.html

* rendering/RenderObjectChildList.cpp:
(WebCore::RenderObjectChildList::insertChildNode):

LayoutTests:

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-08-24
Reviewed by David Hyatt.

* fast/regions/content-flowed-into-regions-dynamically-inserted-expected.png: Added.
* fast/regions/content-flowed-into-regions-dynamically-inserted-expected.txt: Added.
* fast/regions/content-flowed-into-regions-dynamically-inserted.html: Added.

Canonical link: https://commits.webkit.org/82676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93721 268f45cc-cd09-0410-ab3c-d52691b4dbfc